# TypeDrill

./: AddNewTableForm.qml  AddNewWordForm.qml  AppToolbar.qml  CMakeLists.txt  HomePage.qml  PickTablePage.qml  PracticePage.qml  README.md  backend.cpp  backend.h  database.cpp  database.h  database.sql  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclass.cpp  myclass.h
data/: practiceWords.sqlite
